; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_init.c_PE_create_console.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_init.c_PE_create_console.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@PE_state = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@GRAPHICS_MODE = common dso_local global i64 0, align 8
@kPEGraphicsMode = common dso_local global i32 0, align 4
@kPETextMode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PE_create_console() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @PE_state, i32 0, i32 0, i32 0), align 8
  %2 = load i64, i64* @GRAPHICS_MODE, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i32, i32* @kPEGraphicsMode, align 4
  %6 = call i32 @PE_initialize_console(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @PE_state, i32 0, i32 0), i32 %5)
  br label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @kPETextMode, align 4
  %9 = call i32 @PE_initialize_console(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @PE_state, i32 0, i32 0), i32 %8)
  br label %10

10:                                               ; preds = %7, %4
  ret void
}

declare dso_local i32 @PE_initialize_console(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
